Fixed opacity problem
Broken in non-firefox

--- a/main.css
+++ b/main.css
@@ -50,6 +50,7 @@ header {
   width: 100%;
   background-color: #252c34;
   top: 0;
+  z-index:1;
 }
 .header_box {
   width=100%;
@@ -111,12 +112,14 @@ header {
 
 .midbar {
   background-color: white;
+  overflow:hidden;
   text-align: left;
   margin-top:120px;
   margin-left:10%;
   margin-right:10%;
   margin-bottom:30px;
   padding: 40px 50px 30px 40px;
+  opacity:0.8;
 }
 
 .backstretch {
